--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -1,16 +1,77 @@
 
-.Nav{
-    height: 60px;
+.nav{
+    position: fixed;
+    height: 100px;
     width: 100%;
     background: var(--maincolor);
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+}
+.nav_active{
+    position: fixed;
+    height: 50px;
+    width: 100%;
+    background: var(--maincolor);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    cursor: pointer;
+    transition: ease-in 0.3s;
 }
 #nav_logo{
-    height: 55px;
+    height: 100px;
+    position: absolute;
+    left: 10%;
+}
+#nav_logo_active{
+    height: 40px;
+    position: absolute;
+    left: 11.5%;
 }
 .navbuttons{
+    position: absolute;
+    right: 50px;
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.navbutton{
+    color: white;
+    background: none;
+    height: 30px;
+	width: 100px;
+	outline: none;
+	border: none;
+    margin: 5px;
+    cursor: pointer;
+}
+.navbutton:hover{
+    color: var(--color_3)
+}
+.navbutton_active{
+    height: 30px;
+    background: none;
+    color: white;
+	width: 100px;
+	outline: none;
+	border: none;
+	margin: 5px;
+}
+.navbutton_active:hover{
+    color: var(--color_3)
+}
 
+#contact_navbutton_active{
+    color: white;
+    background: var(--color_3);
+    height: 30px;
+	width: 100px;
+	outline: none;
+	border: none;
+    margin: 5px;
+    cursor: pointer;
+    
 }
