--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,12 @@ table {
 }
 h1{
 	color: white;
-	font-size: 60px;
+	font-size: 90px;
+}
+h6{
+	color: white;
+	font-size: 30px;
+	margin-top: 30px;
 }
 
 
