--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    z-index: 100;
+    z-index: 1000;
 }
 .nav_active{
     position: fixed;
@@ -20,6 +20,7 @@
     justify-content: space-around;
     cursor: pointer;
     transition: ease-in 0.3s;
+    z-index: 1000;
 }
 #nav_logo{
     height: 100px;
@@ -59,7 +60,8 @@
 	width: 100px;
 	outline: none;
 	border: none;
-	margin: 5px;
+    margin: 5px;
+    cursor: pointer;
 }
 .navbutton_active:hover{
     color: var(--color_3)
@@ -74,5 +76,7 @@
 	border: none;
     margin: 5px;
     cursor: pointer;
-    
+}
+#contact_navbutton_active:hover{
+    background:rgb(0, 172, 230);
 }
