--- a/src/App.css
+++ b/src/App.css
@@ -52,10 +52,14 @@ table {
   --maincolor: rgba(0, 0, 0, 0.856);
   --accentcolor:rgb(41, 41, 41);
   --color_3:#01B7F4;
+  --color_4:#E5E5E5;
+
+  --highlight:white;
 
   /* FONT */
   --mainfont: 'Montserrat', sans-serif;
   --mainfontsize: 14px;
+  --mainfontcolor: white;
 }
 
 
@@ -64,14 +68,36 @@ table {
   font-size: var(--mainfontsize)
 }
 h1{
-	color: white;
+	color: var(--mainfontcolor);
 	font-size: 90px;
 }
 h6{
-	color: white;
+	color: var(--mainfontcolor);
 	font-size: 30px;
 	margin-top: 30px;
 }
+input{
+	background: var(--color_4);
+	border: none;
+	outline: none;
+	height: 25px;
+	border-radius: 3px;
+	border-style: solid;
+	border-width: 2px;
+	border-color: var(--color_4)
+}
+input:focus{
+	border-color:var(--color_3)
+}
+.reset{
+	padding: 120px 20px 20px 520px;
+	max-height: 100vh;
+	min-height: 100%;
+}
+.highlight{
+	color: var(--maincolor);
+	font-style: italic;
+  }
 
 
 
