--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -7,9 +7,6 @@
   width: 100%;
   text-align: center;
 }
-.highlight{
-  color: var(--maincolor)
-}
 #subtitle{
   position: absolute;
   top: 45%;
@@ -25,14 +22,14 @@
   width: 70px;
   border-radius: 50%;
   top: 86vh;
+  left: 50%;
+  transform: translateX(-50%);
   background: var(--maincolor);
-  margin: auto;
-  left: 0;
-  right: 0;
   border-style: solid;
   border-width: 3px;
   border-color: var(--color_3);
   text-align: center;
+  cursor: pointer;
 }
 .downarrow{
   height: 35px;
@@ -50,7 +47,7 @@
   100% { transform:translateY(50%); opacity:0 }
 }
 #background1{
-  background-image: url('./../Images/background7.jpg');
+  background-image: url('./../Images/background11.jpg');
   min-height: 90vh; 
   background-attachment: fixed;
   background-position: center;
