--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,16 +1,51 @@
-.contact_info{
+.contact_popup{
+    z-index: 1001;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.747);
     position: fixed;
-    height: 70vh;
-    width: 50vw;
+    
+}
+.hidden{
+    display: none;
+}
+
+.contact_popup_box{
     background: white;
+    position: fixed;
+    height: 75vh;
+    width: 50vw;
     left: 50%;
     top: 50%;
     transform: translateY(-50%);
     margin-left: -400px;
-    padding: 20px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+.contact_logo{
+    height: 200px;
+    width: 250px;
+    background-image: url('./../Images/Wailele_logo_final_v2-bw-copy.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.contact_leftside{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.contact_form{
     display: grid;
-    grid-template-columns: 120px 50%;
+    grid-template-columns: 120px 260px;
+    grid-template-rows: 30px;
     grid-column-gap: 30px;
+    grid-row-gap: 10px;
     align-items: center;
     justify-items: end;
 }
@@ -20,13 +55,25 @@
 .contact_label{
     float: right;
 }
+.contact_select{
+    width: 266px;
+    height: 31px;
+    outline: none;
+    border: none;
+    background: var(--color_4);
+    border-style: solid;
+    border-width: 2px;
+    border-color: var(--color_4);
+    -webkit-appearance: none;
+    -webkit-border-radius: 0px;
+}
 #x{
     background-image: url('./../Images/x_icon.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
     position: absolute;
     right: 10px;
     top: 10px;
@@ -36,3 +83,73 @@
 #x:active{
     transform: scale(.9)
 }
+.contact_submit{
+    background:var(--color_3);
+    color: var(--mainfontcolor);
+    width: 100px;
+    height: 30px;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    margin-top: 200px;
+}
+
+
+
+
+
+
+.switch {
+    /* position: absolute; */
+    width: 45px;
+    height: 25px;
+    left: 130px;
+    top: 530px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    background-color: var(--color_4);
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: var(--color_3);
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(19px);
+    -ms-transform: translateX(19px);
+    transform: translateX(19px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+    width: 45px;
+    height: 25px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
