--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,42 @@ table {
   font-family: var(--mainfont);
   font-size: var(--mainfontsize)
 }
+.primarybutton{
+    height: 50px;
+    width: 200px;
+    background: none;
+    color: white;
+    font-size: var(--mainfontsize);
+    background: var(--accentcolor);
+    margin:10px;
+    outline: none;
+    cursor: pointer;
+    -webkit-transition: .25s;
+    -o-transition: .25s;
+	transition: .25s;
+  }
+	.primarybutton:hover{
+	box-shadow: 0px 2px 20px rgb(109, 109, 109);
+	}
+	.primarybutton:active{
+		transform: scale(.95)
+	}
+  .primarybuttonactive{
+    height: 50px;
+    width: 200px;
+    color: var(--color_3);
+    font-size: var(--mainfontsize);
+    background: var(--accentcolor);
+    margin:10px;
+    outline: none;
+    cursor: pointer;
+    -webkit-transition: .25s;
+    -o-transition: .25s;
+    transition: .25s;
+  }
+	.primarybuttonactive:hover{
+		box-shadow: 0px 2px 20px rgb(109, 109, 109);
+	}
 h1{
 	color: var(--mainfontcolor);
 	font-size: 90px;
@@ -74,6 +110,15 @@ h1{
 h2{
 	color: var(--mainfontcolor);
 	font-size: 70px;
+}
+h3{
+	color: var(--accentcolor);
+	font-size: 90px;
+}
+h4{
+	color: var(--accentcolor);
+	font-size: 30px;
+	margin: 20px;
 }
 h6{
 	color: var(--mainfontcolor);
