--- a/src/App.css
+++ b/src/App.css
@@ -117,8 +117,12 @@ h3{
 }
 h4{
 	color: var(--accentcolor);
-	font-size: 30px;
-	margin: 20px;
+	font-size: 32px;
+	margin: 10px 20px 30px 20px;
+}
+h5{
+	color: var(--accentcolor);
+	font-size: 50px;
 }
 h6{
 	color: var(--mainfontcolor);
@@ -151,6 +155,18 @@ input:focus{
 color: var(--color_3);
 font-style: italic;
 }
+.highlightblue_small{
+  color: var(--color_3);
+  font-size: 35px;
+}
+.bold{
+	font-weight: 800;
+}
+.hidden{
+	display: none;
+	opacity: 0;
+}
+  
 
 
 
